fix: corrected encryption of credentials